kubernetes/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pesaguru-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pesaguru-db
  template:
    metadata:
      labels:
        app: pesaguru-db
    spec:
      containers:
      - name: mysql
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1"

        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: pesaguru-db-data
---
apiVersion: v1
kind: Service
metadata:
  name: pesaguru-db
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: pesaguru-db
